Removed deprecated function.